welcome.lessons.welcome.array.island.Island.scala.error
island:12: error: value unary_! is not a member of Int
  } while (!position==taille)
           ^island:6: error: type mismatch;
 found   : Unit
 required: Int
  do { 
  ^